// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ValueTransferLine - snapshots ValueTransferLine failed transaction 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
  testID="vt-3"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
        "zIndex": 999,
      }
    }
  >
    <View
      collapsable={false}
      handlerTag={-1}
      handlerType="PanGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      style={
        {
          "overflow": "hidden",
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": -10000,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#040C17",
              "flexDirection": "row",
              "justifyContent": "center",
              "transform": [
                {
                  "translateX": -132,
                },
              ],
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": 65,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                  "padding": 20,
                  "zIndex": 999,
                }
              }
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      384,
                      512,
                      [
                        128441,
                        128462,
                        61686,
                        "file-alt",
                        "file-text",
                      ],
                      "f15c",
                      "M0 64C0 28.7 28.7 0 64 0L213.5 0c17 0 33.3 6.7 45.3 18.7L365.3 125.3c12 12 18.7 28.3 18.7 45.3L384 448c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 64zm208-5.5l0 93.5c0 13.3 10.7 24 24 24L325.5 176 208 58.5zM120 256c-13.3 0-24 10.7-24 24s10.7 24 24 24l144 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-144 0zm0 96c-13.3 0-24 10.7-24 24s10.7 24 24 24l144 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-144 0z",
                    ],
                    "iconName": "file-lines",
                    "prefix": "fas",
                  }
                }
                size={30}
                style={
                  {
                    "opacity": 0.8,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": 67,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                  "padding": 20,
                  "zIndex": 999,
                }
              }
            >
              <
                color="#18bd18"
                icon={
                  {
                    "icon": [
                      576,
                      512,
                      [
                        61913,
                      ],
                      "f1d8",
                      "M536.4-26.3c9.8-3.5 20.6-1 28 6.3s9.8 18.2 6.3 28l-178 496.9c-5 13.9-18.1 23.1-32.8 23.1-14.2 0-27-8.6-32.3-21.7l-64.2-158c-4.5-11-2.5-23.6 5.2-32.6l94.5-112.4c5.1-6.1 4.7-15-.9-20.6s-14.6-6-20.6-.9L229.2 276.1c-9.1 7.6-21.6 9.6-32.6 5.2L38.1 216.8c-13.1-5.3-21.7-18.1-21.7-32.3 0-14.7 9.2-27.8 23.1-32.8l496.9-178z",
                    ],
                    "iconName": "paper-plane",
                    "prefix": "fas",
                  }
                }
                size={30}
              />
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
        />
      </View>
      <View
        collapsable={false}
        enabled={false}
        handlerTag={-1}
        handlerType="TapGestureHandler"
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        pointerEvents="auto"
        style={
          {
            "transform": [
              {
                "translateX": -0,
              },
            ],
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "borderBottomColor": "#ffffff",
              "borderBottomWidth": 1.5,
              "borderStyle": "solid",
              "display": "flex",
              "flexDirection": "column",
              "marginTop": 10,
              "paddingBottom": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "display": "flex",
                }
              }
            >
              <
                color="#888888"
                icon={
                  {
                    "icon": [
                      384,
                      512,
                      [
                        8593,
                      ],
                      "f062",
                      "M214.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 109.3 160 480c0 17.7 14.3 32 32 32s32-14.3 32-32l0-370.7 105.4 105.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z",
                    ],
                    "iconName": "arrow-up",
                    "prefix": "fas",
                  }
                }
                size={30}
                style={
                  {
                    "marginLeft": 5,
                    "marginRight": 5,
                    "marginTop": 0,
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "display": "flex",
                }
              }
            >
              <View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "display": "flex",
                        "flexDirection": "column",
                        "marginRight": 10,
                      }
                    }
                  >
                    <View
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": undefined,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "display": "flex",
                            "flexDirection": "column",
                            "flexWrap": "wrap",
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#c3c3c3",
                              "fontSize": 18,
                              "fontWeight": "600",
                              "opacity": 1,
                            }
                          }
                        >
                          sent-ad...4567890
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#888888",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "opacity": undefined,
                    }
                  }
                >
                  text translated
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "opacity": 0.65,
                      }
                    }
                  >
                    Jan 1, 12:00 am
                  </Text>
                  <
                    color="#888888"
                    icon={
                      {
                        "icon": [
                          512,
                          512,
                          [
                            128489,
                            61669,
                          ],
                          "f075",
                          "M512 240c0 132.5-114.6 240-256 240-37.1 0-72.3-7.4-104.1-20.7L33.5 510.1c-9.4 4-20.2 1.7-27.1-5.8S-2 485.8 2.8 476.8l48.8-92.2C19.2 344.3 0 294.3 0 240 0 107.5 114.6 0 256 0S512 107.5 512 240z",
                        ],
                        "iconName": "comment",
                        "prefix": "fas",
                      }
                    }
                    size={15}
                    style={
                      {
                        "marginLeft": 10,
                      }
                    }
                  />
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "alignSelf": "auto",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "justifyContent": "flex-end",
                  "marginHorizontal": 5,
                  "opacity": 0.7,
                  "paddingRight": 5,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={false}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight={18}
                    bbWidth={36}
                    fill="#888888"
                    focusable={false}
                    height={18}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        {
                          "marginBottom": 0.9,
                        },
                        {
                          "flex": 0,
                          "height": 18,
                          "width": 36,
                        },
                      ]
                    }
                    vbHeight={147.85}
                    vbWidth={282.84}
                    width={36}
                    xml="<?xml version="1.0" encoding="UTF-8"?>
  <svg viewBox="0 0 282.84 147.85">
    <polygon points="34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62"/>
    <polygon points="180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03"/>
    <path d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"/>
  </svg>"
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4287137928,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                  <Text
                    style={
                      {
                        "color": "#888888",
                        "fontSize": 18,
                        "fontWeight": "700",
                        "margin": 0,
                        "padding": 0,
                      }
                    }
                    testID="undefined.big-part"
                  >
                     0.1234
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#888888",
                        "fontSize": 12.6,
                        "margin": 0,
                        "marginBottom": 1.2,
                        "padding": 0,
                      }
                    }
                    testID="undefined.small-part"
                  >
                    5678
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ValueTransferLine - snapshots ValueTransferLine pending (0 confirmations) 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
  testID="vt-2"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
        "zIndex": 999,
      }
    }
  >
    <View
      collapsable={false}
      handlerTag={-1}
      handlerType="PanGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      style={
        {
          "overflow": "hidden",
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": -10000,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#040C17",
              "flexDirection": "row",
              "justifyContent": "center",
              "transform": [
                {
                  "translateX": -132,
                },
              ],
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": 65,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                  "padding": 20,
                  "zIndex": 999,
                }
              }
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      384,
                      512,
                      [
                        128441,
                        128462,
                        61686,
                        "file-alt",
                        "file-text",
                      ],
                      "f15c",
                      "M0 64C0 28.7 28.7 0 64 0L213.5 0c17 0 33.3 6.7 45.3 18.7L365.3 125.3c12 12 18.7 28.3 18.7 45.3L384 448c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 64zm208-5.5l0 93.5c0 13.3 10.7 24 24 24L325.5 176 208 58.5zM120 256c-13.3 0-24 10.7-24 24s10.7 24 24 24l144 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-144 0zm0 96c-13.3 0-24 10.7-24 24s10.7 24 24 24l144 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-144 0z",
                    ],
                    "iconName": "file-lines",
                    "prefix": "fas",
                  }
                }
                size={30}
                style={
                  {
                    "opacity": 0.8,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": 67,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                  "padding": 20,
                  "zIndex": 999,
                }
              }
            >
              <
                color="#18bd18"
                icon={
                  {
                    "icon": [
                      576,
                      512,
                      [
                        61913,
                      ],
                      "f1d8",
                      "M536.4-26.3c9.8-3.5 20.6-1 28 6.3s9.8 18.2 6.3 28l-178 496.9c-5 13.9-18.1 23.1-32.8 23.1-14.2 0-27-8.6-32.3-21.7l-64.2-158c-4.5-11-2.5-23.6 5.2-32.6l94.5-112.4c5.1-6.1 4.7-15-.9-20.6s-14.6-6-20.6-.9L229.2 276.1c-9.1 7.6-21.6 9.6-32.6 5.2L38.1 216.8c-13.1-5.3-21.7-18.1-21.7-32.3 0-14.7 9.2-27.8 23.1-32.8l496.9-178z",
                    ],
                    "iconName": "paper-plane",
                    "prefix": "fas",
                  }
                }
                size={30}
              />
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
        />
      </View>
      <View
        collapsable={false}
        enabled={false}
        handlerTag={-1}
        handlerType="TapGestureHandler"
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        pointerEvents="auto"
        style={
          {
            "transform": [
              {
                "translateX": -0,
              },
            ],
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "borderBottomColor": "#ffffff",
              "borderBottomWidth": 1.5,
              "borderStyle": "solid",
              "display": "flex",
              "flexDirection": "column",
              "marginTop": 10,
              "paddingBottom": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "display": "flex",
                }
              }
            >
              <
                color="#5a8c5a"
                icon={
                  {
                    "icon": [
                      512,
                      512,
                      [
                        128472,
                        "refresh",
                        "sync",
                      ],
                      "f021",
                      "M65.9 228.5c13.3-93 93.4-164.5 190.1-164.5 53 0 101 21.5 135.8 56.2 .2 .2 .4 .4 .6 .6l7.6 7.2-47.9 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32-14.3 32-32l0-128c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 53.4-11.3-10.7C390.5 28.6 326.5 0 256 0 127 0 20.3 95.4 2.6 219.5 .1 237 12.2 253.2 29.7 255.7s33.7-9.7 36.2-27.1zm443.5 64c2.5-17.5-9.7-33.7-27.1-36.2s-33.7 9.7-36.2 27.1c-13.3 93-93.4 164.5-190.1 164.5-53 0-101-21.5-135.8-56.2-.2-.2-.4-.4-.6-.6l-7.6-7.2 47.9 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L32 320c-8.5 0-16.7 3.4-22.7 9.5S-.1 343.7 0 352.3l1 127c.1 17.7 14.6 31.9 32.3 31.7S65.2 496.4 65 478.7l-.4-51.5 10.7 10.1c46.3 46.1 110.2 74.7 180.7 74.7 129 0 235.7-95.4 253.4-219.5z",
                    ],
                    "iconName": "arrows-rotate",
                    "prefix": "fas",
                  }
                }
                size={30}
                style={
                  {
                    "marginLeft": 5,
                    "marginRight": 5,
                    "marginTop": 0,
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "display": "flex",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "flex-start",
                    "display": "flex",
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 14,
                      "fontWeight": "bold",
                      "opacity": 1,
                    }
                  }
                >
                  text translated
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "opacity": 0.65,
                      }
                    }
                  >
                    Jan 1, 12:00 am
                  </Text>
                  <
                    color="#5a8c5a"
                    icon={
                      {
                        "icon": [
                          512,
                          512,
                          [
                            128489,
                            61669,
                          ],
                          "f075",
                          "M512 240c0 132.5-114.6 240-256 240-37.1 0-72.3-7.4-104.1-20.7L33.5 510.1c-9.4 4-20.2 1.7-27.1-5.8S-2 485.8 2.8 476.8l48.8-92.2C19.2 344.3 0 294.3 0 240 0 107.5 114.6 0 256 0S512 107.5 512 240z",
                        ],
                        "iconName": "comment",
                        "prefix": "fas",
                      }
                    }
                    size={15}
                    style={
                      {
                        "marginLeft": 10,
                      }
                    }
                  />
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "alignSelf": "auto",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "justifyContent": "flex-end",
                  "marginHorizontal": 5,
                  "opacity": 1,
                  "paddingRight": 5,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={false}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight={18}
                    bbWidth={36}
                    fill="#5a8c5a"
                    focusable={false}
                    height={18}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        {
                          "marginBottom": 0.9,
                        },
                        {
                          "flex": 0,
                          "height": 18,
                          "width": 36,
                        },
                      ]
                    }
                    vbHeight={147.85}
                    vbWidth={282.84}
                    width={36}
                    xml="<?xml version="1.0" encoding="UTF-8"?>
  <svg viewBox="0 0 282.84 147.85">
    <polygon points="34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62"/>
    <polygon points="180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03"/>
    <path d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"/>
  </svg>"
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4284124250,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                  <Text
                    style={
                      {
                        "color": "#5a8c5a",
                        "fontSize": 18,
                        "fontWeight": "700",
                        "margin": 0,
                        "padding": 0,
                      }
                    }
                    testID="undefined.big-part"
                  >
                     0.1234
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#5a8c5a",
                        "fontSize": 12.6,
                        "margin": 0,
                        "marginBottom": 1.2,
                        "padding": 0,
                      }
                    }
                    testID="undefined.small-part"
                  >
                    5678
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "marginTop": 3,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#5a8c5a",
                  "fontSize": 12,
                  "fontWeight": "700",
                  "marginLeft": 40,
                  "opacity": 1,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                }
              }
            >
              text translated
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ValueTransferLine - snapshots ValueTransferLine received, no month header 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
  testID="vt-4"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
        "zIndex": 999,
      }
    }
  >
    <View
      collapsable={false}
      handlerTag={-1}
      handlerType="PanGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      style={
        {
          "overflow": "hidden",
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": -10000,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#040C17",
              "flexDirection": "row",
              "justifyContent": "center",
              "transform": [
                {
                  "translateX": -132,
                },
              ],
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": 65,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                  "padding": 20,
                  "zIndex": 999,
                }
              }
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      384,
                      512,
                      [
                        128441,
                        128462,
                        61686,
                        "file-alt",
                        "file-text",
                      ],
                      "f15c",
                      "M0 64C0 28.7 28.7 0 64 0L213.5 0c17 0 33.3 6.7 45.3 18.7L365.3 125.3c12 12 18.7 28.3 18.7 45.3L384 448c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 64zm208-5.5l0 93.5c0 13.3 10.7 24 24 24L325.5 176 208 58.5zM120 256c-13.3 0-24 10.7-24 24s10.7 24 24 24l144 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-144 0zm0 96c-13.3 0-24 10.7-24 24s10.7 24 24 24l144 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-144 0z",
                    ],
                    "iconName": "file-lines",
                    "prefix": "fas",
                  }
                }
                size={30}
                style={
                  {
                    "opacity": 0.8,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
        />
      </View>
      <View
        collapsable={false}
        enabled={false}
        handlerTag={-1}
        handlerType="TapGestureHandler"
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        pointerEvents="auto"
        style={
          {
            "transform": [
              {
                "translateX": -0,
              },
            ],
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "borderBottomColor": "#5a8c5a",
              "borderBottomWidth": 0.5,
              "borderStyle": "solid",
              "display": "flex",
              "flexDirection": "column",
              "marginTop": 10,
              "paddingBottom": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "display": "flex",
                }
              }
            >
              <
                color="#18bd18"
                icon={
                  {
                    "icon": [
                      384,
                      512,
                      [
                        8595,
                      ],
                      "f063",
                      "M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7-105.4-105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z",
                    ],
                    "iconName": "arrow-down",
                    "prefix": "fas",
                  }
                }
                size={30}
                style={
                  {
                    "marginLeft": 5,
                    "marginRight": 5,
                    "marginTop": 0,
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "display": "flex",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "flex-start",
                    "display": "flex",
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#18bd18",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "opacity": 1,
                    }
                  }
                >
                  text translated
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "opacity": 0.65,
                      }
                    }
                  >
                    Jan 1, 12:00 am
                  </Text>
                  <
                    color="#5a8c5a"
                    icon={
                      {
                        "icon": [
                          512,
                          512,
                          [
                            128489,
                            61669,
                          ],
                          "f075",
                          "M512 240c0 132.5-114.6 240-256 240-37.1 0-72.3-7.4-104.1-20.7L33.5 510.1c-9.4 4-20.2 1.7-27.1-5.8S-2 485.8 2.8 476.8l48.8-92.2C19.2 344.3 0 294.3 0 240 0 107.5 114.6 0 256 0S512 107.5 512 240z",
                        ],
                        "iconName": "comment",
                        "prefix": "fas",
                      }
                    }
                    size={15}
                    style={
                      {
                        "marginLeft": 10,
                      }
                    }
                  />
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "alignSelf": "auto",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "justifyContent": "flex-end",
                  "marginHorizontal": 5,
                  "opacity": 1,
                  "paddingRight": 5,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={false}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight={18}
                    bbWidth={36}
                    fill="#18bd18"
                    focusable={false}
                    height={18}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        {
                          "marginBottom": 0.9,
                        },
                        {
                          "flex": 0,
                          "height": 18,
                          "width": 36,
                        },
                      ]
                    }
                    vbHeight={147.85}
                    vbWidth={282.84}
                    width={36}
                    xml="<?xml version="1.0" encoding="UTF-8"?>
  <svg viewBox="0 0 282.84 147.85">
    <polygon points="34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62"/>
    <polygon points="180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03"/>
    <path d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"/>
  </svg>"
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4279811352,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                  <Text
                    style={
                      {
                        "color": "#18bd18",
                        "fontSize": 18,
                        "fontWeight": "700",
                        "margin": 0,
                        "padding": 0,
                      }
                    }
                    testID="undefined.big-part"
                  >
                     0.7765
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#18bd18",
                        "fontSize": 12.6,
                        "margin": 0,
                        "marginBottom": 1.2,
                        "padding": 0,
                      }
                    }
                    testID="undefined.small-part"
                  >
                    4321
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ValueTransferLine - snapshots ValueTransferLine sent confirmed 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
  testID="vt-1"
>
  <View
    style={
      {
        "backgroundColor": "#011401",
        "borderBottomWidth": 1,
        "borderColor": "#011401",
        "borderTopWidth": 1,
        "paddingBottom": 0,
        "paddingLeft": 15,
        "paddingTop": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#c3c3c3",
          "opacity": 0.65,
        }
      }
    >
      January 2024
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
        "zIndex": 999,
      }
    }
  >
    <View
      collapsable={false}
      handlerTag={-1}
      handlerType="PanGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      style={
        {
          "overflow": "hidden",
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": -10000,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#040C17",
              "flexDirection": "row",
              "justifyContent": "center",
              "transform": [
                {
                  "translateX": -132,
                },
              ],
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": 65,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                  "padding": 20,
                  "zIndex": 999,
                }
              }
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      384,
                      512,
                      [
                        128441,
                        128462,
                        61686,
                        "file-alt",
                        "file-text",
                      ],
                      "f15c",
                      "M0 64C0 28.7 28.7 0 64 0L213.5 0c17 0 33.3 6.7 45.3 18.7L365.3 125.3c12 12 18.7 28.3 18.7 45.3L384 448c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 64zm208-5.5l0 93.5c0 13.3 10.7 24 24 24L325.5 176 208 58.5zM120 256c-13.3 0-24 10.7-24 24s10.7 24 24 24l144 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-144 0zm0 96c-13.3 0-24 10.7-24 24s10.7 24 24 24l144 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-144 0z",
                    ],
                    "iconName": "file-lines",
                    "prefix": "fas",
                  }
                }
                size={30}
                style={
                  {
                    "opacity": 0.8,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": 67,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                  "padding": 20,
                  "zIndex": 999,
                }
              }
            >
              <
                color="#18bd18"
                icon={
                  {
                    "icon": [
                      576,
                      512,
                      [
                        61913,
                      ],
                      "f1d8",
                      "M536.4-26.3c9.8-3.5 20.6-1 28 6.3s9.8 18.2 6.3 28l-178 496.9c-5 13.9-18.1 23.1-32.8 23.1-14.2 0-27-8.6-32.3-21.7l-64.2-158c-4.5-11-2.5-23.6 5.2-32.6l94.5-112.4c5.1-6.1 4.7-15-.9-20.6s-14.6-6-20.6-.9L229.2 276.1c-9.1 7.6-21.6 9.6-32.6 5.2L38.1 216.8c-13.1-5.3-21.7-18.1-21.7-32.3 0-14.7 9.2-27.8 23.1-32.8l496.9-178z",
                    ],
                    "iconName": "paper-plane",
                    "prefix": "fas",
                  }
                }
                size={30}
              />
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
        />
      </View>
      <View
        collapsable={false}
        enabled={false}
        handlerTag={-1}
        handlerType="TapGestureHandler"
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        pointerEvents="auto"
        style={
          {
            "transform": [
              {
                "translateX": -0,
              },
            ],
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "borderBottomColor": "#ffffff",
              "borderBottomWidth": 1.5,
              "borderStyle": "solid",
              "display": "flex",
              "flexDirection": "column",
              "marginTop": 10,
              "paddingBottom": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "display": "flex",
                }
              }
            >
              <
                color="#c3c3c3"
                icon={
                  {
                    "icon": [
                      384,
                      512,
                      [
                        8593,
                      ],
                      "f062",
                      "M214.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 109.3 160 480c0 17.7 14.3 32 32 32s32-14.3 32-32l0-370.7 105.4 105.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z",
                    ],
                    "iconName": "arrow-up",
                    "prefix": "fas",
                  }
                }
                size={30}
                style={
                  {
                    "marginLeft": 5,
                    "marginRight": 5,
                    "marginTop": 0,
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "display": "flex",
                }
              }
            >
              <View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "display": "flex",
                        "flexDirection": "column",
                        "marginRight": 10,
                      }
                    }
                  >
                    <View
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": undefined,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "display": "flex",
                            "flexDirection": "column",
                            "flexWrap": "wrap",
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#c3c3c3",
                              "fontSize": 18,
                              "fontWeight": "600",
                              "opacity": 1,
                            }
                          }
                        >
                          sent-ad...4567890
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "opacity": 1,
                    }
                  }
                >
                  text translated
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "opacity": 0.65,
                      }
                    }
                  >
                    Jan 1, 12:00 am
                  </Text>
                  <
                    color="#5a8c5a"
                    icon={
                      {
                        "icon": [
                          512,
                          512,
                          [
                            128489,
                            61669,
                          ],
                          "f075",
                          "M512 240c0 132.5-114.6 240-256 240-37.1 0-72.3-7.4-104.1-20.7L33.5 510.1c-9.4 4-20.2 1.7-27.1-5.8S-2 485.8 2.8 476.8l48.8-92.2C19.2 344.3 0 294.3 0 240 0 107.5 114.6 0 256 0S512 107.5 512 240z",
                        ],
                        "iconName": "comment",
                        "prefix": "fas",
                      }
                    }
                    size={15}
                    style={
                      {
                        "marginLeft": 10,
                      }
                    }
                  />
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "alignSelf": "auto",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "justifyContent": "flex-end",
                  "marginHorizontal": 5,
                  "opacity": 1,
                  "paddingRight": 5,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={false}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight={18}
                    bbWidth={36}
                    fill="#c3c3c3"
                    focusable={false}
                    height={18}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        {
                          "marginBottom": 0.9,
                        },
                        {
                          "flex": 0,
                          "height": 18,
                          "width": 36,
                        },
                      ]
                    }
                    vbHeight={147.85}
                    vbWidth={282.84}
                    width={36}
                    xml="<?xml version="1.0" encoding="UTF-8"?>
  <svg viewBox="0 0 282.84 147.85">
    <polygon points="34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62"/>
    <polygon points="180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03"/>
    <path d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"/>
  </svg>"
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4291019715,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 18,
                        "fontWeight": "700",
                        "margin": 0,
                        "padding": 0,
                      }
                    }
                    testID="undefined.big-part"
                  >
                     0.1234
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 12.6,
                        "margin": 0,
                        "marginBottom": 1.2,
                        "padding": 0,
                      }
                    }
                    testID="undefined.small-part"
                  >
                    5678
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
